Up-to-date iPython notebook

--- a/deletion_denoise.ipynb
+++ b/deletion_denoise.ipynb
@@ -12,9 +12,14 @@
     "from pybrain.optimization import CMAES\n",
     "\n",
     "global kmers\n",
-    "kmers = []\n",
-    "read_length = 100\n",
-    "num_reads = 1000000\n",
+    "global orig\n",
+    "global noisy\n",
+    "global k\n",
+    "global n\n",
+    "global alphabet\n",
+    "global delta\n",
+    "global rho\n",
+    "global max_del\n",
     "\n",
     "def allklength(k, alphabet):\n",
     "    allklengthHelper(k, alphabet, \"\")\n",
@@ -34,9 +39,6 @@
     "        index = int(random.random()*(len(genome)-read_length))\n",
     "        concatenated += genome[index:index+read_length]\n",
     "    return concatenated\n",
-    "\n",
-    "def kEntropy(input, k, alphabet):\n",
-    "    return 0\n",
     "\n",
     "def calculateMatrix(input_sequence, k, alphabet):\n",
     "    matrix_dim = len(alphabet)**k;\n",
@@ -181,8 +183,8 @@
     "def denoiseSequence2(noisy, k, alphabet, deletion_rate, max_del=1, weights=[1]):\n",
     "    adjust = 1\n",
     "    if len(weights) != max_del:\n",
-    "        print('Error: dimension of weights vector is not equal to number of separation lengths.')\n",
-    "        print('Using default weights.')\n",
+    "        #print('Error: dimension of weights vector is not equal to number of separation lengths.')\n",
+    "        #print('Using default weights.')\n",
     "        weights = [1]*maxdel\n",
     "    context_hists = []\n",
     "    for j in range(max_del):\n",
@@ -225,10 +227,14 @@
     "    return noisy\n",
     "        \n",
     "\n",
-    "def denoiseSequence3(noisy, k, alphabet, rho, l=-1):\n",
+    "def denoiseSequence3(noisy, k, alphabet, rho, l=-1, weights=[1]):\n",
     "    adjust = 1\n",
     "    if l == -1:\n",
     "        l = k\n",
+    "    if len(weights) != l:\n",
+    "        #print('Error: dimension of weights vector is not equal to number of votes per context.')\n",
+    "        #print('Using default weights.')\n",
+    "        weights = [1]*l\n",
     "    context_left = {} \n",
     "    context_right = {}\n",
     "    for i in range(len(noisy)):\n",
@@ -255,13 +261,13 @@
     "                        p1 = sum([int(y == noisy[i-x]) for y in context_right[context1[i-x+1:i-x+k+1]]])\n",
     "                        p2 = sum([int(y == noisy[i-x]) for y in context_right[context2[i-x+1:i-x+k+1]]])\n",
     "                        if (1-rho)*p1 <= rho*p2:\n",
-    "                            vote += 1\n",
+    "                            vote += weights[x]\n",
     "                for x in range(l):\n",
     "                    if context2[i+x-k:i+x] in context_left:\n",
     "                        p1 = sum([int(y == noisy[i+x]) for y in context_left[context1[i+x-k:i+x]]]) \n",
     "                        p2 = sum([int(y == noisy[i+x]) for y in context_left[context2[i+x-k:i+x]]])\n",
     "                        if (1-rho)*p1 <= rho*p2:\n",
-    "                            vote += 1\n",
+    "                            vote += weights[x]\n",
     "                if vote >= l:\n",
     "                    noisy = noisy[:i+1]+a+noisy[i+1:]\n",
     "    return noisy\n",
@@ -281,41 +287,21 @@
     "    f.write(noisy)\n",
     "    f.close()\n",
     "\n",
-    "def weightWrapper(weights):\n",
-    "    a = 0.5\n",
-    "    eps = 0.2\n",
-    "    max_del = 1\n",
-    "    n = 10000\n",
-    "    alphabet = ['+', '-']\n",
-    "    p = random.random()\n",
-    "    k = int(0.5*math.log(n, 3))\n",
-    "    x = ''\n",
-    "    for i in range(n):\n",
-    "        if i == 0:\n",
-    "            if p < 0.5:\n",
-    "                x += '+'\n",
-    "            else:\n",
-    "                x += '-'\n",
-    "        else:\n",
-    "            if p < a:\n",
-    "                if x[i-1] == '+':\n",
-    "                    x += '-'\n",
-    "                else:\n",
-    "                    x += '+'\n",
-    "            else:\n",
-    "                x += x[i-1]\n",
-    "            p = random.random()\n",
-    "    noisy = deletionChannel(x, eps)\n",
-    "    est1 = denoiseSequence2(noisy, k, alphabet, eps, max_del, weights)\n",
-    "    err = error(est1, x)/(n+0.0)\n",
+    "def weightWrapper1(weights):\n",
+    "    est1 = denoiseSequence2(noisy, k, alphabet, rho, max_del, weights)\n",
+    "    est = optimalDenoise(noisy, k, alphabet, rho, delta)\n",
+    "    err = error(est1, orig)/(n+0.0)\n",
     "    return err\n",
     "    \n",
+    "def weightWrapper2(weights):\n",
+    "    est2 = denoiseSequence3(noisy, k, alphabet, rho, max_del, weights)\n",
+    "    est = optimalDenoise(noisy, k, alphabet, rho, delta)\n",
+    "    err = error(est2, orig)/(n+0.0)\n",
+    "    return err\n",
     "\n",
-    "def markovSourceDenoise(a, eps):\n",
-    "    n = 10000\n",
-    "    display = 50\n",
-    "    alphabet = ['+', '-']\n",
+    "def generateSequence(n, a):\n",
     "    p = random.random()\n",
+    "    global k\n",
     "    k = int(0.5*math.log(n, 3))\n",
     "    x = ''\n",
     "    for i in range(n):\n",
@@ -333,29 +319,49 @@
     "            else:\n",
     "                x += x[i-1]\n",
     "            p = random.random()\n",
-    "    noisy = deletionChannel(x, eps)\n",
-    "    est1 = denoiseSequence2(noisy, k, alphabet, eps)\n",
-    "    est2 = denoiseSequence3(noisy, k, alphabet, eps)\n",
-    "    est = optimalDenoise(noisy, k, alphabet, eps, a)\n",
-    "    print 'Setting: alpha = ', a, ', epsilon = ', eps \n",
-    "    print 'Original: ', x[:display], '(length ', len(x), ' error ', error(x, x)/(n+0.0), ')'\n",
-    "    print 'Noisy: ', noisy[:display], '(length ', len(noisy), ' error ', error(noisy, x)/(n+0.0), ')'\n",
-    "    print 'Denoised: ', est[:display], '(length ', len(est), ' error ', error(est, x)/(n+0.0), ' )'\n",
-    "    print 'Denoiser 1: ', est1[:display], '(length ', len(est1), ' error ', error(est1, x)/(n+0.0), ')'\n",
-    "    print 'Denoiser 2: ', est2[:display], '(length ', len(est2), ' error ', error(est2, x)/(n+0.0), ')'\n",
+    "    return x\n",
+    "\n",
+    "def markovSourceDenoise(transition_prob, deletion_rate, weighted=False):\n",
+    "    global delta\n",
+    "    delta = transition_prob\n",
+    "    global rho\n",
+    "    rho = deletion_rate\n",
+    "    global max_del\n",
+    "    max_del = 1\n",
+    "    global n\n",
+    "    n = 10000\n",
+    "    display = 50\n",
+    "    global alphabet\n",
+    "    alphabet = ['+', '-']\n",
+    "    global orig\n",
+    "    orig = generateSequence(n, delta)\n",
+    "    global noisy\n",
+    "    noisy = deletionChannel(orig, rho)\n",
+    "    est1 = denoiseSequence2(noisy, k, alphabet, rho)\n",
+    "    est2 = denoiseSequence3(noisy, k, alphabet, rho)\n",
+    "    est = optimalDenoise(noisy, k, alphabet, rho, delta)\n",
+    "    print 'Setting: delta = ', delta, ', rho = ', rho \n",
+    "    print 'Original: ', orig[:display], '(length ', len(orig), ' error ', error(orig, orig)/(n+0.0), ')'\n",
+    "    print 'Noisy: ', noisy[:display], '(length ', len(noisy), ' error ', error(noisy, orig)/(n+0.0), ')'\n",
+    "    print 'Denoised: ', est[:display], '(length ', len(est), ' error ', error(est, orig)/(n+0.0), ' )'\n",
+    "    print 'Denoiser 1: ', est1[:display], '(length ', len(est1), ' error ', error(est1, orig)/(n+0.0), ')'\n",
+    "    print 'Denoiser 2: ', est2[:display], '(length ', len(est2), ' error ', error(est2, orig)/(n+0.0), ')'\n",
+    "    if weighted:\n",
+    "        l1 = CMAES(weightWrapper1, [1])\n",
+    "        l1.minimize = True\n",
+    "        l1.maxEvaluations = 200\n",
+    "        weights1 = l1.learn()[0]\n",
+    "        l2 = CMAES(weightWrapper2, [1]*k)\n",
+    "        l2.minimize = True\n",
+    "        l2.maxEvaluations = 200\n",
+    "        weights2 = l2.learn()[0]\n",
+    "        weighted_est1 = denoiseSequence2(noisy, k, alphabet, rho, max_del, weights1)\n",
+    "        weighted_est2 = denoiseSequence3(noisy, k, alphabet, rho, max_del, weights2)\n",
+    "        print 'Weighted Denoiser 1: ', weighted_est1[:display], '(length ', len(weighted_est1), ' error ', error(weighted_est1, orig)/(n+0.0), ')'\n",
+    "        print 'Weighted Denoiser 2: ', weighted_est2[:display], '(length ', len(weighted_est2), ' error ', error(weighted_est2, orig)/(n+0.0), ')'\n",
     "    print '\\n'*5\n",
     "\n",
-    "#alphas = [0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 0.99]\n",
-    "#epsilons = [0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 0.99]\n",
-    "#for i in range(len(alphas)):\n",
-    "#    for j in range(len(epsilons)):\n",
-    "#        markovSourceDenoise(alphas[i], epsilons[j])            \n",
-    "\n",
-    "l = CMAES(weightWrapper, [1])\n",
-    "l.minimize = True\n",
-    "l.maxEvaluations = 50\n",
-    "optval = l.learn()\n",
-    "print(optval)\n"
+    "markovSourceDenoise(0.9, 0.2, True)\n"
    ]
   }
  ],
